--- a/.github/workflows/development_pairecipesfront.yml
+++ b/.github/workflows/development_pairecipesfront.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Set up Node.js version
       uses: actions/setup-node@v1
       with:
-        node-version: '12-lts'
+        node-version: '14.x'
 
     - name: npm install, build, and test
       run: |
@@ -32,5 +32,5 @@ jobs:
       with:
         app-name: 'pairecipesfront'
         slot-name: 'production'
-        publish-profile: ${{ secrets.AzureAppService_PublishProfile_7940c93783cb486cbb85d53a57762a06 }}
+        publish-profile: ${{ secrets.AzureAppService_PublishProfile_cc9476cf1d7c454fa7bd291f3db4edd2 }}
         package: .
